State meegeven met post request
